--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "angular-aria": "^1.5.7",
     "angular-material": "^1.1.0-rc.5",
     "express": "^4.14.0",
+    "material-design-icons": "^2.2.3",
     "mongodb": "^2.1.18"
   },
   "devDependencies": {
