--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "angular-material": "^1.1.0-rc.5",
     "express": "^4.14.0",
     "material-design-icons": "^2.2.3",
-    "mongodb": "^2.1.18"
+    "mongodb": "^2.1.18",
+    "mongoose": "^4.5.2"
   },
   "devDependencies": {
     "grunt": "^1.0.1",
