--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "mongodb": "^2.1.18",
     "mongoose": "^4.5.2",
     "multer": "^1.1.0",
-    "ng-file-upload": "^12.0.4"
+    "ng-file-upload": "^12.0.4",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "grunt": "^1.0.1",
