--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "multer": "^1.1.0",
     "ng-file-upload": "^12.0.4",
     "passport": "^0.3.2",
-    "passport-local": "^1.0.0"
+    "passport-http": "^0.3.0"
   },
   "devDependencies": {
     "grunt": "^1.0.1",
